--- a/by.Reba/by.Reba.Application/Views/Article/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Details.cshtml
@@ -33,7 +33,7 @@
 </div>
 }
 
-<div class="card card body bg-lightgrey m-0 m-sm-2">
+<div class="card card body bg-lightgrey m-0 m-md-2">
     @if (Model.isAuthenticated)
     {
         <h3 class="text-success mx-3 mt-3">Комментарии:</h3>
