--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -10,8 +10,8 @@
     </head>
     <body>
         <partial name="_LayoutHeader"></partial>
-        <main role="main" class="me-3">
-            <div class="d-flex gap-2">
+        <main role="main" class="m-0 me-md-3">
+            <div class="d-flex gap-1 gap-sm-2">
                 <partial name="AdminAside"></partial>
                 <div class="flex-grow-1">
                     @RenderBody()
