--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -10,37 +10,37 @@
     }
 }
 
-<div class="d-flex flex-column gap-5 text-success">
-    <div class="d-flex flex-column px-3">
-        <div class="d-flex flex-row justify-content-between align-items-center">
-            <div class="d-flex flex-row gap-3 align-items-center">
+<div class="d-flex flex-column gap-2 gap-md-5 text-success">
+    <div class="d-flex flex-row flex-md-column gap-0 gap-md-3 p-0 px-sm-3">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
+            <div class="d-flex flex-row gap-1 gap-sm-3 align-items-center">
                 <img src="~/@Model.AvatarUrl" alt="avatar" height="100" width="100" class="rounded-circle" />
                 <div class="d-flex flex-column align-items-start">
                     <h2 class="">@Model.Nickname</h2>
                     <h6 class="">@Model.RoleName</h6>
                 </div>
             </div>
-            <div class="d-flex flex-column align-items-center gap-3">
-                <big class="m-0">Комментарии</big>
+            <div class="d-flex flex-column align-items-start align-items-md-center gap-3 mt-3 m-md-0">
+                <p class="m-0">Комментарии</p>
                 <small class="m-0">@Model.Comments.Count()</small>
             </div>
-            <div class="d-flex flex-column align-items-center gap-3">
-                <big class="m-0">Дата регистрации</big>
+            <div class="d-flex flex-column align-items-start align-items-md-center gap-3">
+                <p class="m-0">Дата регистрации</p>
                 <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
             </div>
-            <div class="d-flex flex-column align-items-center gap-3">
-                <big class="m-0">Почта</big>
+            <div class="d-flex flex-column align-items-start align-items-md-center gap-3">
+                <p class="m-0">Почта</p>
                 <small class="m-0">@Model.Email</small>
             </div>
         </div>       
 
-        <div class="d-flex flex-row justify-content-end gap-5">
+        <div class="d-flex flex-column flex-md-row justify-content-end justify-content-md-center justify-content-lg-around gap-5">
             <div class="d-flex flex-column">
-                <big class="m-0">Предпочитаемый рейтинг позитивности</big>
+                <p class="m-0">Предпочитаемый рейтинг позитивности</p>
                 <small class="m-0">@Model.MinPositivityRatingName</small>
             </div>
             <div class="d-flex flex-column">
-                <big class="m-0">Предпочитаемые категории</big>
+                <p class="m-0">Предпочитаемые категории</p>
                 @foreach (var category in Model.Categories)
                 {
                     <small class="m-0">@category</small>
@@ -52,7 +52,7 @@
 
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column flex-grow-1">
-            <div class="btn-group d-flex justify-content-center">
+            <div class="btn-group d-flex justify-content-center mx-sm-2">
                 <button id="btn-activity" type="submit" class="btn btn-success active">Активность</button>
                 <button id="btn-history" type="submit" class="btn btn-success">История</button>
             </div>
@@ -60,7 +60,7 @@
                 <div class="card card body bg-lightgrey m-0 m-sm-2">
                     @if (Model.Comments.Any())
                     {
-                        foreach (var comment in Model.Comments)
+                        foreach (var comment in Model.Comments.OrderByDescending(c => c.CreationTime))
                         {
                             <partial name="_CommentShortSummaryPartial" model="comment"></partial>
                         }
