end user details view

--- a/by.Reba/by.Reba.Application/Views/Article/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Details.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData["Title"] = Model.Title;
 
-    if (Model.isAdmin)
+    if (Model.IsAdmin)
     {
         Layout = "_AdminLayout";
     }
