--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -11,51 +11,65 @@
 }
 
 <div class="d-flex flex-column gap-2 gap-md-5 text-success">
-    <div class="d-flex flex-row flex-md-column gap-0 gap-md-3 p-0 px-sm-3">
-        <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
-            <div class="d-flex flex-row gap-1 gap-sm-3 align-items-center">
-                <img src="~/@Model.AvatarUrl" alt="avatar" height="100" width="100" class="rounded-circle" />
-                <div class="d-flex flex-column align-items-start">
-                    <h2 class="">@Model.Nickname</h2>
-                    <h6 class="">@Model.RoleName</h6>
+    <div class="d-flex flex-row gap-2 gap-lg-5">
+        <div class="d-flex flex-row flex-md-column gap-1 gap-md-3 p-0 px-lg-3 flex-grow-1">
+            <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
+                <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center">
+                    <img src="~/@Model.AvatarUrl" alt="avatar" height="width" width="50%" class="rounded-circle" />
+                    <div class="d-flex flex-column align-items-start">
+                        <h2 class="">@Model.Nickname</h2>
+                        <h6 class="">@Model.RoleName</h6>
+                    </div>
+                </div>
+                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3 mt-3 m-md-0">
+                    <p class="m-0">Комментарии</p>
+                    <small class="m-0">@Model.Comments.Count()</small>
+                </div>
+                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
+                    <p class="m-0">Дата регистрации</p>
+                    <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
                 </div>
             </div>
-            <div class="d-flex flex-column align-items-start align-items-md-center gap-3 mt-3 m-md-0">
-                <p class="m-0">Комментарии</p>
-                <small class="m-0">@Model.Comments.Count()</small>
-            </div>
-            <div class="d-flex flex-column align-items-start align-items-md-center gap-3">
-                <p class="m-0">Дата регистрации</p>
-                <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
-            </div>
-            <div class="d-flex flex-column align-items-start align-items-md-center gap-3">
-                <p class="m-0">Почта</p>
-                <small class="m-0">@Model.Email</small>
-            </div>
-        </div>       
 
-        <div class="d-flex flex-column flex-md-row justify-content-end justify-content-md-center justify-content-lg-around gap-5">
-            <div class="d-flex flex-column">
-                <p class="m-0">Предпочитаемый рейтинг позитивности</p>
-                <small class="m-0">@Model.MinPositivityRatingName</small>
+            <div class="d-flex flex-column flex-md-row justify-content-end justify-content-md-start gap-5">
+                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
+                    <p class="m-0">Почта</p>
+                    <small class="m-0">@Model.Email</small>
+                </div>
+                @if (Model.IsSelf)
+                {
+                    <div class="d-flex flex-column">
+                        <p class="m-0">Предпочитаемая позитивность</p>
+                        <small class="m-0">@Model.MinPositivityRatingName</small>
+                    </div> 
+                }
             </div>
-            <div class="d-flex flex-column">
-                <p class="m-0">Предпочитаемые категории</p>
+        </div>
+        @if (Model.IsSelf)
+        {
+            <div class="d-flex flex-column pe-1 justify-content-center">
+                <p class="text-center m-0">Любимые категории:</p>
                 @foreach (var category in Model.Categories)
                 {
                     <small class="m-0">@category</small>
                 }
             </div>
-        </div>
-
-    </div>
+        }
+    </div> 
 
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column flex-grow-1">
-            <div class="btn-group d-flex justify-content-center mx-sm-2">
-                <button id="btn-activity" type="submit" class="btn btn-success active">Активность</button>
-                <button id="btn-history" type="submit" class="btn btn-success">История</button>
-            </div>
+            @if (Model.IsSelf)
+            {
+                <div class="btn-group d-flex justify-content-center mx-sm-2">
+                    <button id="btn-activity" type="submit" class="btn btn-success active">Активность</button>
+                    <button id="btn-history" type="submit" class="btn btn-success">История</button>
+                </div>  
+            }
+            else {
+                <p class="bg-success text-light text-center mx-2 py-1">Активность</p>
+            }
+
             <div id="user-activity">
                 <div class="card card body bg-lightgrey m-0 m-sm-2">
                     @if (Model.Comments.Any())
@@ -70,36 +84,39 @@
                     }
                 </div>
             </div>
-            <div id="user-history" class="d-none">
-                <div class="card card body bg-lightgrey m-0 m-sm-2">
-                    @if (Model.History.Any())
-                    {
-                        <table class="table table-hover align-middle text-center table-bordered">
-                            <thead class="align-middle">
-                                <tr class="bg-secondary text-light">
-                                    <th>Время</th>
-                                    <th>Название</th>
-                                </tr>
-                            </thead>
-                            <tbody class="text-success">
-                                @foreach (var article in Model.History.OrderByDescending(h => h.LastVisitTime))
-                                {
-                                    <tr>
-                                        <td>@article.LastVisitTime.ToString("dd MMMM hh:mm", new CultureInfo("ru-RU"))</td>
-                                        <td class="text-start">
-                                            <a asp-controller="Article" asp-action="Details" asp-route-id="@article.ArticleId">@article.ArticleTitle</a>
-                                        </td>
+            @if (Model.IsSelf)
+            {
+                <div id="user-history" class="d-none">
+                    <div class="card card body bg-lightgrey m-0 m-sm-2">
+                        @if (Model.History.Any())
+                        {
+                            <table class="table table-hover align-middle text-center table-bordered">
+                                <thead class="align-middle">
+                                    <tr class="bg-secondary text-light">
+                                        <th>Время</th>
+                                        <th>Название</th>
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
-                    }
-                    else
-                    {
-                        <p>История отсутствует</p>
-                    }
+                                </thead>
+                                <tbody class="text-success">
+                                    @foreach (var article in Model.History.OrderByDescending(h => h.LastVisitTime))
+                                    {
+                                        <tr>
+                                            <td>@article.LastVisitTime.ToString("dd MMMM hh:mm", new CultureInfo("ru-RU"))</td>
+                                            <td class="text-start">
+                                                <a asp-controller="Article" asp-action="Details" asp-route-id="@article.ArticleId">@article.ArticleTitle</a>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        }
+                        else
+                        {
+                            <p>История отсутствует</p>
+                        }
+                    </div>
                 </div>
-            </div>
+            }
         </div>
     </div>
 </div>
