--- a/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
@@ -22,7 +22,7 @@ else {
 
         <ul class="dropdown-menu dropdown-menu-end position-absolute bg-lightgrey">
             <li class="dropdown-item text-success">
-                <a asp-controller="Account" asp-action="Details">
+                <a asp-controller="Account" asp-action="Details" asp-route-userEmail="@Model.Email">
                     <div class="d-flex justify-content-start gap-2">
                         <img src="~/@Model.AvatarUrl" alt="avatar" height="30" width="30" class="rounded-circle" />
                         <p class="align-self-center m-0">@Model.Nickname</p>
@@ -32,14 +32,14 @@ else {
             <li class="dropdown-item text-success">
                 <a asp-controller="Account" asp-action="Edit">
                     <div class="d-flex justify-content-start gap-2">
-                        <img src="~/" alt="avatar" height="30" width="30" class="rounded-circle" />
-                        <p class="align-self-center m-0">Редактировать</p>
+                        <img src="~/settings.svg" alt="settings" height="30" width="30" class="rounded-circle" />
+                        <p class="align-self-center m-0">Настройки</p>
                     </div>
                 </a>
             </li>
             <li class="dropdown-divider"></li>
             <li class="dropdown-item text-success">
-                <a asp-controller="Account" asp-action="SignOut" asp-route-id="@Model.Id">
+                <a asp-controller="Account" asp-action="SignOut">
                     <div class="d-flex justify-content-start gap-2">
                         <img src="~/logout.png" alt="logout" height="30" width="30" />
                         <p class="align-self-center m-0">Выйти</p>
