--- a/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
@@ -6,10 +6,10 @@
     <div class="card-header text-success p-0 p-md-2">
         <div class="d-flex">
             <div class="d-flex justify-content-between flex-row align-items-center gap-3">
-                <div class="d-flex justify-content-start flex-row align-items-center ps-2">
+                <a asp-controller="Account" asp-action="Details" asp-route-userEmail="@Model.Author.Email" class="d-flex justify-content-start flex-row align-items-center ps-2">
                     <img src="~/@Model.Author.AvatarUrl" alt="avatar" width="40px" height="40px" />
-                    <div class="p-2">@Model.Author.Nickname </div>
-                </div>
+                    <big class="p-2">@Model.Author.Nickname </big>
+                </a>
                 <div class="d-none d-md-flex justify-content-center flex-row gap-3 align-items-center">
                     <date-formatter asp-for="@Model.CreationTime"></date-formatter>
                     <button class="btn btn-success px-md-2 py-md-1" type="button" data-bs-toggle="collapse" data-bs-target="#@($"c{Model.Id}")" aria-expanded="true">
