--- a/by.Reba/by.Reba.Application/Views/Shared/AdminAside.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/AdminAside.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="bg-light">
-    <ul class="d-flex flex-column nav text-success fw-bold text-decoration-underline">
+    <ul class="d-flex flex-column nav text-success fw-bold">
         <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a asp-controller="User" asp-action="Grid">Пользователи</a></li>
         <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a asp-controller="Article" asp-action="Grid">Новости</a></li>
     </ul>
