--- a/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditPartial.cshtml
@@ -15,6 +15,10 @@
     <input asp-for="Text" type="text" class="form-control">
     <span asp-validation-for="Text" class="text-danger"></span>
 
+    <label asp-for="SourceUrl" class="form-label">Источник</label>
+    <input asp-for="SourceUrl" type="url" class="form-control">
+    <span asp-validation-for="SourceUrl" class="text-danger"></span>
+
     <input type="hidden" value="@Model.Categories" />
     <select asp-for="CategoryId" asp-items="@Model.Categories" class="form-select"></select>
 
