--- a/by.Reba/by.Reba.Application/Views/Shared/AdminAside.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/AdminAside.cshtml
@@ -1,6 +1,8 @@
-﻿<div class="bg-light">
+﻿<div>
     <ul class="d-flex flex-column nav text-success fw-bold">
-        <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a asp-controller="User" asp-action="Grid">Пользователи</a></li>
+        <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a href="/hangfire">Hangfire</a></li>
+        <hr />
+        <li class="px-1 px-sm-3"><a asp-controller="User" asp-action="Grid">Пользователи</a></li>
         <li class="px-1 pt-2 px-sm-3 pt-sm-3"><a asp-controller="Article" asp-action="Grid">Новости</a></li>
     </ul>
 </div>
