--- a/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_LayoutHeader.cshtml
@@ -1,9 +1,9 @@
-﻿<header class="mb-3">
+﻿<header id="begin" class="mb-3">
     <nav class="navbar bg-secondary bg-opacity-50 shadow p-3">
         <div class="container-fluid">
             <a asp-controller="Article" asp-action="Index" class="navbar-brand d-flex align-items-center">
                 <img src="~/favicon.png" alt="Logo" width="70" height="70" class="d-inline-block">
-                <big id="logo" class="p-2 fs-2 text-success">Reba.by</big>
+                <big id="logo" class="p-2 fs-2">Reba.by</big>
             </a>
 
             <ul id="login-nav" class="navbar-nav"></ul>
