--- a/by.Reba/by.Reba.Application/Views/Article/_PreviewPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_PreviewPartial.cshtml
@@ -3,8 +3,8 @@
 
 @model ArticlePreviewDTO
 
-<a asp-controller="Article" asp-action="Details" asp-route-id="@Model.Id" class="text-decoration-none text-black">
-    <div class="row row-cols-2 row-cols-sm-1 h-100 border border-1 rounded bg-light">
+<a asp-controller="Article" asp-action="Details" asp-route-id="@Model.Id" class="text-black">
+    <div class="row row-cols-2 row-cols-sm-1 h-100 border border-1 rounded bg-light border-success">
         <div id="article-preview" class="col-4 p-0">
             <img src="@Model.PosterUrl" alt="article" class="card-img-top h-100">
         </div>
