Fixed creation user preference. Added some stylization and comments route features

--- a/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/NavigationUserPreview.cshtml
@@ -22,7 +22,7 @@ else {
 
         <ul class="dropdown-menu dropdown-menu-end position-absolute bg-lightgrey">
             <li class="dropdown-item text-success">
-                <a asp-controller="Account" asp-action="Details" asp-route-userEmail="@Model.Email">
+                <a asp-controller="Account" asp-action="Details" asp-route-id="@Model.Id">
                     <div class="d-flex justify-content-start gap-2">
                         <img src="~/@Model.AvatarUrl" alt="avatar" height="30" width="30" class="rounded-circle" />
                         <p class="align-self-center m-0">@Model.Nickname</p>
