--- a/by.Reba/by.Reba.Application/Views/Account/CreatePreference.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/CreatePreference.cshtml
@@ -8,33 +8,32 @@
 <h2 class="mb-5 text-center text-success">Настройка предпочтений</h2>
 
 <form asp-controller="Account" asp-action="CreatePreference" method="post">
-    <input type="hidden" asp-for="Categories" value="@Model.Categories" />
     <div class="d-flex flex-row justify-content-between gap-3 mb-3">
         <div class="d-flex flex-column w-100 px-1 px-md-3">
             <h5 class="align-self-center text-success mb-3">Предпочитаемые категории:</h5>
             <ul class="list-group">
-                @if (Model.Categories.Any())
+                @if (Model.AllCategories.Any())
                 {
-                    @foreach (var category in Model.Categories)
+                    @foreach (var category in Model.AllCategories)
                     {
                         <li class="list-group-item bg-lightgrey">
-                            <input class="form-check-input" type="checkbox" name="@nameof(Model.CategoriesId)" value="@category.Value">
-                            <label class="form-check-label ms-3">@category.Text</label>
+                            <input class="form-check-input" type="checkbox" name="@nameof(Model.CategoriesId)" value="@category.Value" id="@($"check{category.Value}")">
+                            <label class="form-check-label ms-3" for="@($"check{category.Value}")">@category.Text</label>
                         </li>
+
                     }
                 }
                
             </ul>
+            <span asp-validation-for="CategoriesId" class="text-danger"></span>
         </div>
-        <span asp-validation-for="CategoriesId" class="text-danger"></span>
 
-        <input type="hidden" asp-for="Ratings" value="@Model.Ratings" />
         <div class="d-flex flex-column w-100">
             <h5 class="align-self-center text-success mb-3">Предпочитаемая позитивность:</h5>
             <ul class="list-group mb-3">
-                @if (Model.Ratings.Any())
+                @if (Model.AllRatings.Any())
                 {
-                    @foreach (var rating in Model.Ratings)
+                    @foreach (var rating in Model.AllRatings)
                     {
                     <li class="list-group-item bg-lightgrey">
                         <input class="form-check-input" type="radio" name="@nameof(Model.RatingId)" checked="@rating.Selected" value="@rating.Value">
@@ -45,8 +44,8 @@
                     }
                 }
             </ul>
+            <span asp-validation-for="RatingId" class="text-danger"></span>
         </div>
-        <span asp-validation-for="RatingId" class="text-danger"></span>
     </div>
 
     <small class="text-muted ps-3">Предпочтения можно настроить позже в настройках.</small>
