--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -10,54 +10,44 @@
     }
 }
 
-<div class="d-flex flex-column gap-2 gap-md-5 text-success">
-    <div class="d-flex flex-row gap-2 gap-lg-5">
-        <div class="d-flex flex-row flex-md-column gap-1 gap-md-3 p-0 px-lg-3 flex-grow-1">
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
-                <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center">
-                    <img src="~/@Model.AvatarUrl" alt="avatar" height="width" width="50%" class="rounded-circle" />
-                    <div class="d-flex flex-column align-items-start">
-                        <h2 class="">@Model.Nickname</h2>
-                        <h6 class="">@Model.RoleName</h6>
-                    </div>
-                </div>
-                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3 mt-3 m-md-0">
-                    <p class="m-0">Комментарии</p>
-                    <small class="m-0">@Model.Comments.Count()</small>
-                </div>
-                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
-                    <p class="m-0">Дата регистрации</p>
-                    <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
-                </div>
+<div class="d-flex flex-column gap-3">
+    <div class="d-flex flex-row justify-content-between align-items-md-center flex-wrap gap-1 px-3">
+        <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center">
+            <img src="~/@Model.AvatarUrl" alt="avatar" height="width" width="50%" class="rounded-circle" />
+            <div class="d-flex flex-column align-items-start">
+                <h2 class="">@Model.Nickname</h2>
+                <h6 class="">@Model.RoleName</h6>
             </div>
-
-            <div class="d-flex flex-column flex-md-row justify-content-end justify-content-md-start gap-5">
-                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
-                    <p class="m-0">Почта</p>
-                    <small class="m-0">@Model.Email</small>
-                </div>
-                @if (Model.IsSelf)
-                {
-                    <div class="d-flex flex-column">
-                        <p class="m-0">Предпочитаемая позитивность</p>
-                        <small class="m-0">@Model.MinPositivityRatingName</small>
-                    </div> 
-                }
-            </div>
+        </div>
+        <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3 mt-3 m-md-0">
+            <p class="m-0">Комментарии</p>
+            <small class="m-0">@Model.Comments.Count()</small>
+        </div>
+        <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
+            <p class="m-0">Дата регистрации</p>
+            <small class="m-0">@Model.RegistrationDate.ToString("dd MMMM yyyy", new CultureInfo("ru-RU"))</small>
+        </div>
+        <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
+            <p class="m-0">Почта</p>
+            <small class="m-0">@Model.Email</small>
         </div>
         @if (Model.IsSelf)
         {
-            <div class="d-flex flex-column pe-1 justify-content-center">
-                <p class="text-center m-0">Любимые категории:</p>
-                @foreach (var category in Model.Categories)
-                {
-                    <small class="m-0">@category</small>
-                }
+            <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
+                <p class="m-0">Предпочитаемая позитивность</p>
+                <small class="m-0">@Model.MinPositivityRatingName</small>
             </div>
         }
     </div> 
 
     <div class="d-flex flex-row gap-3">
+        <div class="d-flex flex-column pe-1 justify-content-start">
+            <p class="text-center m-0">Любимые категории:</p>
+            @foreach (var category in Model.Categories)
+            {
+                <small class="m-0">- @category</small>
+            }
+        </div>
         <div class="d-flex flex-column flex-grow-1">
             @if (Model.IsSelf)
             {
