--- a/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CommentPartial.cshtml
@@ -2,11 +2,11 @@
 @using by.Reba.Core.DataTransferObjects.Comment
 @model CommentDTO
 
-<div class="card bg-lightgrey m-1 m-md-3">
+<div id="@($"comment{Model.Id}")" class="card bg-lightgrey m-1 m-md-3">
     <div class="card-header text-success p-0 p-md-2">
         <div class="d-flex">
             <div class="d-flex justify-content-between flex-row align-items-center gap-3">
-                <a asp-controller="Account" asp-action="Details" asp-route-userEmail="@Model.Author.Email" class="d-flex justify-content-start flex-row align-items-center ps-2">
+                <a asp-controller="Account" asp-action="Details" asp-route-id="@Model.Author.Id" class="d-flex justify-content-start flex-row align-items-center ps-2">
                     <img src="~/@Model.Author.AvatarUrl" alt="avatar" width="40px" height="40px" />
                     <big class="p-2">@Model.Author.Nickname </big>
                 </a>
