--- a/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_CreateOrEditPartial.cshtml
@@ -1,31 +1,43 @@
 ﻿@using by.Reba.Application.Models.Article
 @model CreateOrEditVM
 
-<div class="mb-3">
+<div class="d-flex flex-column gap-3">
     <input asp-for="Id" type="hidden"/>
-    <label asp-for="Title" class="form-label">Название</label>
-    <input asp-for="Title" type="text" class="form-control">
-    <span asp-validation-for="Title" class="text-danger"></span>
+    <div>
+        <label asp-for="Title" class="form-label">Название</label>
+        <input asp-for="Title" type="text" class="form-control">
+        <span asp-validation-for="Title" class="text-danger"></span>
+    </div>
 
-    <label asp-for="PosterUrl" class="form-label">Превью</label>
-    <input asp-for="PosterUrl" type="url" class="form-control">
-    <span asp-validation-for="PosterUrl" class="text-danger"></span>
+    <div>
+        <label asp-for="PosterUrl" class="form-label">Превью</label>
+        <input asp-for="PosterUrl" type="url" class="form-control">
+        <span asp-validation-for="PosterUrl" class="text-danger"></span>
+    </div>
 
-    <label asp-for="Text" class="form-label">Контент</label>
-    <input asp-for="Text" type="text" class="form-control">
-    <span asp-validation-for="Text" class="text-danger"></span>
+    <div>
+        <label asp-for="Text" class="form-label">Контент</label>
+        <input asp-for="Text" type="text" class="form-control">
+        <span asp-validation-for="Text" class="text-danger"></span>
+    </div>
 
-    <label asp-for="SourceUrl" class="form-label">Источник</label>
-    <input asp-for="SourceUrl" type="url" class="form-control">
-    <span asp-validation-for="SourceUrl" class="text-danger"></span>
+    <div>
+        <label asp-for="SourceUrl" class="form-label">Источник</label>
+        <input asp-for="SourceUrl" type="url" class="form-control">
+        <span asp-validation-for="SourceUrl" class="text-danger"></span>
+    </div>
 
-    <input type="hidden" value="@Model.Categories" />
-    <select asp-for="CategoryId" asp-items="@Model.Categories" class="form-select"></select>
+    <div>
+        <label asp-for="@Model.Categories" class="form-label">Категории</label>
+        <select asp-for="CategoryId" asp-items="@Model.Categories" class="form-select"></select>
+    </div>
 
-    <input type="hidden" value="@Model.Sources" />
-    <select asp-for="SourceId" asp-items="@Model.Sources" class="form-select"></select>
+    <div>
+        <label asp-for="@Model.Sources" class="form-label">Источники</label>
+        <select asp-for="SourceId" asp-items="@Model.Sources" class="form-select">Источник</select>
+    </div>
 
-    <button type="submit" class="btn btn-primary">Подтвердить</button>
+    <button type="submit" class="btn btn-success">Подтвердить</button>
 </div>
 
 @section Scripts
