--- a/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_FilterPartial.cshtml
@@ -30,8 +30,8 @@
                             @foreach (var category in Model.Categories)
                             {
                                 <li class="list-group-item bg-lightgrey">
-                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id">
-                                    <label class="form-check-label ms-3">@category.Title</label>
+                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Categories)" checked="@Model.CurrentFilter.Categories.Contains(category.Id)" value="@category.Id" id="@($"check{category.Id}")">
+                                    <label for="@($"check{category.Id}")" class="form-check-label ms-3">@category.Title</label>
                                 </li>
                             }
                         </ul>
@@ -54,10 +54,8 @@
                             @foreach (var rating in Model.PositivityRatings)
                             {
                                 <li class="list-group-item bg-lightgrey">
-                                    <input class="form-check-input" type="radio" name="MinPositivityRating" checked="@Model.CurrentFilter.MinPositivityRating.Equals(rating.Id)" value="@rating.Id">
-                                    <label class="form-check-label ms-3">
-                                        @rating.Title
-                                    </label>
+                                    <input class="form-check-input" type="radio" name="MinPositivityRating" checked="@Model.CurrentFilter.MinPositivityRating.Equals(rating.Id)" value="@rating.Id" id="@($"radio{rating.Id}")">
+                                    <label for="@($"radio{rating.Id}")" class="form-check-label ms-3">@rating.Title</label>
                                 </li>
                             }
                         </ul>
@@ -80,8 +78,8 @@
                             @foreach (var source in Model.Sources)
                             {
                                 <li class="list-group-item bg-lightgrey">
-                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Sources)" checked="@Model.CurrentFilter.Sources.Contains(source.Id)" value="@source.Id">
-                                    <label class="form-check-label ms-3">@source.Name</label>
+                                    <input class="form-check-input" type="checkbox" name="@nameof(Model.Sources)" checked="@Model.CurrentFilter.Sources.Contains(source.Id)" value="@source.Id" id="@($"check{source.Id}")">
+                                    <label for="@($"check{source.Id}")" class="form-check-label ms-3">@source.Name</label>
                                 </li>
                             }
                         </ul>
