--- a/by.Reba/by.Reba.Application/wwwroot/css/site.css
+++ b/by.Reba/by.Reba.Application/wwwroot/css/site.css
@@ -62,7 +62,6 @@ a {
 
 a:hover {
     color: darkgreen;
-/*    text-decoration: underline;*/
 }
 
 .form-control,
@@ -87,5 +86,10 @@ a:hover {
 }
 
 .card {
+    border: 1px solid #198754;
+}
+
+.form-select {
+    background-color: lightgray;
     border: 1px solid #198754;
 }
