--- a/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
@@ -9,6 +9,8 @@
         Layout = "_AdminLayout";
     }
 }
+<form asp-controller="Account" asp-action="Edit" method="post">
+<input type="hidden" name="@nameof(Model.Id)" value="@Model.Id"/>
 
 <div class="d-flex flex-column gap-2 gap-md-5 text-success">
     <div class="d-flex flex-row gap-2 gap-lg-5">
@@ -22,13 +24,21 @@
                 </div>
             </div>
 
-            <div class="d-flex flex-column flex-md-row justify-content-end justify-content-md-start gap-5">
-                <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
-                    <p class="m-0">Почта</p>
-                    <small class="m-0">@Model.Email</small>
-                </div>
+            <div class="my-3">
+                <label asp-for="Nickname" class="form-label text-success">Никнейм</label>
+                <input type="text" asp-for="Nickname" class="form-control">
             </div>
+            <span asp-validation-for="Nickname" class="text-danger"></span>
+
+            <div class="my-3">
+                <label asp-for="Email" class="form-label text-success">Почта</label>
+                <input type="email" asp-for="Email" class="form-control">
+            </div>
+            <span asp-validation-for="Email" class="text-danger"></span>
+
+            <input type="text" name="@nameof(Model.AvatarUrl)" value="~/@Model.AvatarUrl"/>
         </div>
+
         <div class="d-flex flex-column pe-1 justify-content-center">
             <p class="text-center m-0">Любимые категории:</p>
             <ul class="list-group">
@@ -41,13 +51,26 @@
             }
             </ul>
         </div>
+
+        <div class="d-flex justify-content-center flex-column w-100">
+            <h5 class="text-success mb-3">Позитивность:</h5>
+            <ul class="list-group mb-3">
+                @foreach (var rating in Model.Ratings)
+                {
+                    <li class="list-group-item bg-lightgrey">
+                        <input class="form-check-input" type="radio" name="@nameof(Model.RatingId)" checked="@rating.Selected" value="@rating.Value">
+                        <label class="form-check-label ms-3">@rating.Text</label>
+                    </li>
+                }
+            </ul>
+        </div>
     </div> 
 </div>
 
-@section Scripts
-    {
-    <script src="~/lib/jquery-validation//dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-}
+<div class="form-group pt-3">
+    <button type="submit" class="btn btn-success col-12 px-3">Подтвердить</button>
+</div>
+
+</form>
 
 
