--- a/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
@@ -30,13 +30,7 @@
             </div>
             <span asp-validation-for="Nickname" class="text-danger"></span>
 
-            <div class="my-3">
-                <label asp-for="Email" class="form-label text-success">Почта</label>
-                <input type="email" asp-for="Email" class="form-control">
-            </div>
-            <span asp-validation-for="Email" class="text-danger"></span>
-
-            <input type="text" name="@nameof(Model.AvatarUrl)" value="~/@Model.AvatarUrl"/>
+            <input type="text" class="form-control" name="@nameof(Model.AvatarUrl)" value="@Model.AvatarUrl"/>
         </div>
 
         <div class="d-flex flex-column pe-1 justify-content-center">
