--- a/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System.Globalization
 @using by.Reba.Application.Models.Account
+@using by.Reba.Application.Models.Category
+@using by.Reba.Application.Models.PositivityRating
 @model EditUserVM
 
 @{
@@ -35,28 +37,12 @@
 
         <div class="d-flex flex-column pe-1 justify-content-center">
             <p class="text-center m-0">Любимые категории:</p>
-            <ul class="list-group">
-            @foreach (var category in Model.Categories)
-            {
-                <li class="list-group-item bg-lightgrey">
-                    <input class="form-check-input" type="checkbox" name="@nameof(Model.CategoriesId)" checked="@category.Selected" value="@category.Value">
-                    <label class="form-check-label ms-3">@category.Text</label>
-                </li>
-            }
-            </ul>
+            <partial name="_AllCategoriesWithSelectedByUserPreference" model="@new AllCategoriesVM() { CategoriesId = Model.CategoriesId, Categories = Model.Categories}"></partial>
         </div>
 
         <div class="d-flex justify-content-center flex-column w-100">
             <h5 class="text-success mb-3">Позитивность:</h5>
-            <ul class="list-group mb-3">
-                @foreach (var rating in Model.Ratings)
-                {
-                    <li class="list-group-item bg-lightgrey">
-                        <input class="form-check-input" type="radio" name="@nameof(Model.RatingId)" checked="@rating.Selected" value="@rating.Value">
-                        <label class="form-check-label ms-3">@rating.Text</label>
-                    </li>
-                }
-            </ul>
+            <partial name="_AllRatingsWithSelectedByUserPreference" model="@new AllRatingsVM() { MinPositivityRating = Model.RatingId, PositivityRatings = Model.Ratings}"></partial>
         </div>
     </div> 
 </div>
