--- a/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Details.cshtml
@@ -12,8 +12,8 @@
 
 <div class="d-flex flex-column gap-3">
     <div class="d-flex flex-row justify-content-between align-items-md-center flex-wrap gap-1 px-3">
-        <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center">
-            <img src="~/@Model.AvatarUrl" alt="avatar" height="width" width="50%" class="rounded-circle" />
+        <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center circle-image">
+            <img src="@Model.AvatarUrl" alt="avatar"/>
             <div class="d-flex flex-column align-items-start">
                 <h2 class="">@Model.Nickname</h2>
                 <h6 class="">@Model.RoleName</h6>
@@ -21,7 +21,7 @@
         </div>
         <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3 mt-3 m-md-0">
             <p class="m-0">Комментарии</p>
-            <small class="m-0">@Model.Comments.Count()</small>
+            <small class="m-0">@Model.CommentsCount</small>
         </div>
         <div class="d-flex flex-column align-items-start align-items-md-center gap-1 gap-md-3">
             <p class="m-0">Дата регистрации</p>
@@ -64,7 +64,7 @@
                 <div class="card card body bg-lightgrey m-0 m-sm-2">
                     @if (Model.Comments.Any())
                     {
-                        foreach (var comment in Model.Comments.Take(10))
+                        foreach (var comment in Model.Comments)
                         {
                             <partial name="_CommentShortSummaryPartial" model="comment"></partial>
                         }
@@ -88,7 +88,7 @@
                                     </tr>
                                 </thead>
                                 <tbody class="text-success">
-                                    @foreach (var article in Model.History.OrderByDescending(h => h.LastVisitTime))
+                                    @foreach (var article in Model.History)
                                     {
                                         <tr>
                                             <td>@article.LastVisitTime.ToString("dd MMMM hh:mm", new CultureInfo("ru-RU"))</td>
