--- a/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Account/Edit.cshtml
@@ -14,40 +14,43 @@
 <form asp-controller="Account" asp-action="Edit" method="post">
 <input type="hidden" name="@nameof(Model.Id)" value="@Model.Id"/>
 
-<div class="d-flex flex-column gap-2 gap-md-5 text-success">
-    <div class="d-flex flex-row gap-2 gap-lg-5">
-        <div class="d-flex flex-row flex-md-column gap-1 gap-md-3 p-0 px-lg-3 flex-grow-1">
-            <div class="d-flex flex-column flex-md-row justify-content-between align-items-md-center">
-                <div class="d-flex flex-row gap-1 gap-lg-3 align-items-center">
-                    <img src="~/@Model.AvatarUrl" alt="avatar" height="width" width="50%" class="rounded-circle" />
-                    <div class="d-flex flex-column align-items-start">
-                        <h2 class="">@Model.Nickname</h2>
-                    </div>
-                </div>
+<div class="d-flex flex-column flex-lg-row justify-content-center gap-2 gap-lg-5 text-success">
+    <div class="d-flex flex-row flex-lg-column justify-content-between align-items-center gap-3">
+        <div class="d-flex flex-column align-items-center gap-3">
+            <div class="d-flex flex-row align-items-center circle-image">
+                <img id="avatar-image" src="@Model.AvatarUrl" alt="avatar" class="circle-avatar"/>
             </div>
+        </div>
 
+        <div class="d-flex flex-column justify-content-between justify-content-lg-start flex-grow-1">
             <div class="my-3">
                 <label asp-for="Nickname" class="form-label text-success">Никнейм</label>
                 <input type="text" asp-for="Nickname" class="form-control">
             </div>
             <span asp-validation-for="Nickname" class="text-danger"></span>
 
-            <input type="text" class="form-control" name="@nameof(Model.AvatarUrl)" value="@Model.AvatarUrl"/>
+            <div class="my-3">
+                <label asp-for="AvatarUrl" class="form-label text-success">Аватар</label>
+                <input id="avatar-input" type="text" class="form-control" name="@nameof(Model.AvatarUrl)" value="@Model.AvatarUrl" oninput="changeAvatar(this.value)" />
+            </div>
+                <button type="button" class="btn btn-success" onclick="setDefaultAvatar()">По умолчанию</button>
         </div>
+    </div>
 
+    <div class="d-flex flex-column justify-content-between flex-sm-row align-items-sm-start gap-1 gap-lg-5">
         <div class="d-flex flex-column pe-1 justify-content-center">
-            <p class="text-center m-0">Любимые категории:</p>
+            <h5 class="text-center my-3">Любимые категории:</h5>
             <partial name="_AllCategoriesWithSelectedByUserPreference" model="@new AllCategoriesVM() { CategoriesId = Model.CategoriesId, Categories = Model.Categories}"></partial>
         </div>
 
-        <div class="d-flex justify-content-center flex-column w-100">
-            <h5 class="text-success mb-3">Позитивность:</h5>
-            <partial name="_AllRatingsWithSelectedByUserPreference" model="@new AllRatingsVM() { MinPositivityRating = Model.RatingId, PositivityRatings = Model.Ratings}"></partial>
+        <div class="d-flex justify-content-center flex-column">
+            <h5 class="text-center my-3">Позитивность:</h5>
+            <partial name="_AllRatingsWithSelectedByUserPreference" model="@new AllRatingsVM() { MinPositivityRating = Model.MinPositivityRating, PositivityRatings = Model.Ratings}"></partial>
         </div>
-    </div> 
+    </div>
 </div>
 
-<div class="form-group pt-3">
+    <div class="form-group col-12 offset-0 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 pt-3">
     <button type="submit" class="btn btn-success col-12 px-3">Подтвердить</button>
 </div>
 
