--- a/by.Reba/by.Reba.Application/Views/Shared/_CommentShortSummaryPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_CommentShortSummaryPartial.cshtml
@@ -6,15 +6,15 @@
     <div class="card-header text-success p-0 p-sm-2">
         <div class="d-flex justify-content-between gap-3">
             <div class="d-flex justify-content-between flex-row align-items-center gap-3">
-                <div class="d-flex justify-content-start flex-row align-items-center ps-2">
-                    <img src="~/@Model.Author.AvatarUrl" alt="avatar" width="40px" height="40px" />
+                <div class="d-flex justify-content-start flex-row align-items-center ps-2 circle-image">
+                    <img src="@Model.Author.AvatarUrl" alt="avatar" class="nav-avatar"/>
                     <div class="p-2">@Model.Author.Nickname </div>
                 </div>
                 <div class="d-none d-lg-flex justify-content-center flex-row gap-3 align-items-center">
                     <date-formatter asp-for="@Model.CreationTime"></date-formatter>
                 </div>
             </div>
-            <div class="d-flex flex-row gap-3 p-2">
+            <div class="d-flex flex-row gap-3 p-2 align-items-center">
                 <div class="d-none d-lg-flex">
                     <a asp-controller="Article" asp-action="Details" asp-route-id="@Model.ArticleId" asp-fragment="@($"comment{Model.Id}")">К новости</a>
                 </div>
